--- a/.github/workflows/cronjob.yaml
+++ b/.github/workflows/cronjob.yaml
@@ -24,11 +24,12 @@ jobs:
       run: |
         echo ${token_json} > token.json
 
-    # Runs a single command using the runners shell
+    # Required environment variables
+    # - SLACK_TOKEN
+    # - SHEET_ID
     - name: Run the docker script
       run: sh run_prod.sh
 
-    # Runs a set of commands using the runners shell
     - name: Commit last_timestamp.txt
       run: |
         git commit -am 'Update last_timestamp.txt'
