Update to use secrets for GitHub action

--- a/.github/workflows/cronjob.yaml
+++ b/.github/workflows/cronjob.yaml
@@ -18,15 +18,20 @@ jobs:
 
     - name: Prepare credentials.json
       run: |
-        echo ${credentials_json:?} > credentials.json
+        echo ${{ secrets.credentials_json }} > credentials.json
 
     - name: Prepare token.json
       run: |
-        echo ${token_json} > token.json
+        echo ${{ secrets.token_json  }} > token.json
 
     # Required environment variables
     # - SLACK_TOKEN
     # - SHEET_ID
+    - name: Prepare environment variables
+      run: |
+        export SLACK_TOKEN=${{ secrets.SLACK_TOKEN }}
+        export SHEET_ID=${{ secrets.SHEET_ID }}
+
     - name: Run the docker script
       run: sh run_prod.sh
 
