--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -4,7 +4,7 @@ on:
   push:
     # Publish `master` as Docker `latest` image.
     branches:
-      - kkweon-dev
+      - kkweon-develop
 
   # Run tests for any PRs.
   pull_request:
@@ -59,6 +59,6 @@ jobs:
 
           docker tag image $IMAGE_ID:$VERSION
           docker tag image $IMAGE_ID:latest
-          
+
           docker push $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:latest
