--- a/.github/workflows/cronjob.yaml
+++ b/.github/workflows/cronjob.yaml
@@ -4,6 +4,9 @@ on:
   schedule:
     # every hour.
     - cron: "0 * * * *"
+      
+  repository_dispatch:
+    types: manual-trigger
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
