Add ES command to CronJob.

--- a/.github/workflows/cronjob.yaml
+++ b/.github/workflows/cronjob.yaml
@@ -4,7 +4,7 @@ on:
   schedule:
     # every hour.
     - cron: "0 * * * *"
-      
+
   repository_dispatch:
     types: manual-trigger
 
@@ -39,7 +39,7 @@ jobs:
           LB_IP: ${{ secrets.LB_IP }}
           ES_USERNAME: ${{ secrets.ES_USERNAME }}
           ES_PASSWORD: ${{ secrets.ES_PASSWORD }}
-        run: sh run_prod.sh
+        run: make run_prod put_data
 
       - name: Commit last_timestamp.txt
         run: |
