Commenting cronjob temporarily

--- a/.github/workflows/cronjob.yaml
+++ b/.github/workflows/cronjob.yaml
@@ -1,9 +1,9 @@
 name: Fetch slack messages and push.
 
 on:
-  schedule:
-    # every hour.
-    - cron: "0 * * * *"
+  #schedule:
+    ## every hour.
+    #- cron: "0 * * * *"
 
   repository_dispatch:
     types: manual-trigger
