--- a/elasticsearch_utils/mapping.json
+++ b/elasticsearch_utils/mapping.json
@@ -523,6 +523,10 @@
             }
           }
         }
+      },
+      "datetime": {
+        "type": "date",
+        "format": "epoch_second"
       }
     }
   }
